syntax = "proto3";

package auth;

option go_package = "gen/auth/v1";

option java_multiple_files = true;
option java_package = "io.grpc.examples.auth";
option java_outer_classname = "AuthProto";

service Auth {
  rpc GetToken (TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string username = 1;
  string password = 2;
  string grantType = 3;
}

message TokenResponse {
  string token = 1;
  string token_type = 2;
  double expired_at = 3;
}
